# awscli-profile

./: README.md  pyproject.toml
src/awscli_profile/: __init__.py  __main__.py
