[project]
name = "awscli-profile"
version = "0.1.0"
description = "awscli profile manager intended for use as cli alias"
authors = [
    {name = "Yuichiro Smith", email = "yu-ichiro@s3i7h.com"},
]
dependencies = []
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
