[project]
name = "awscli-profile"
version = "1.0.0"
description = "awscli profile manager intended for use as cli alias"
authors = [
    {name = "Yuichiro Smith", email = "yu-ichiro@s3i7h.com"},
]
dependencies = [
    "typer>=0.12.4",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

[project.scripts]
aws-profile = "awscli_profile:main"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
